--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,9 +4,10 @@
         <div class="row align-items-center justify-content-around">
             <div class="text-center text-md-left section-intro mt-4">
                 <h1 class="display-3">Static School 🎓</h1>
-                <span class="lead">
-                    Discover, explore, and compare static site generators.
-                </span>
+                <p class="lead">
+                    Discover, explore, and compare static site generators (SSGs)
+                    and related JAMstack software.
+                </p>
             </div>
         </div>
         <!--end of row-->
